--- a/fetch.html
+++ b/fetch.html
@@ -15,13 +15,14 @@
 <body>
 
     <div class="container">
-        <h1>Fetch HTML example</h1>
+        <div id="app"></div>
     </div>
 
 
-    <script src="fetch.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <script src=" fetch.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js "></script>
 </body>
 
 </html>
