--- a/fetch.html
+++ b/fetch.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="container">
-        <div id="app"></div>
+        <div id="app" class="col-md-4"></div>
     </div>
 
 
